Fix dashboard text wrapping issues

--- a/app/assets/stylesheets/searchjoy/application.css
+++ b/app/assets/stylesheets/searchjoy/application.css
@@ -26,6 +26,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   margin-bottom: 20px;
+  table-layout: auto;
 }
 
 th {
@@ -57,6 +58,7 @@ table td, table th {
 
 td {
   border-top: solid 1px #ddd;
+  word-wrap: break-word;
 }
 
 .text-muted {
@@ -79,6 +81,7 @@ a.type-link {
   color: #fff;
   padding: 8px;
   border-radius: 4px;
+  text-wrap: nowrap;
 }
 
 a.type-link:hover {
